--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "PRISMA_QUERY_ENGINE_LIBRARY=\"./node_modules/.prisma/client/libquery_engine-debian-openssl-3.0.x.so.node\" next dev --turbopack -p 9002",
+    "dev": "PRISMA_QUERY_ENGINE_LIBRARY=\"/home/user/studio/node_modules/.prisma/client/libquery_engine-debian-openssl-3.0.x.so.node\" next dev --turbopack -p 9002",
     "genkit:dev": "genkit start -- tsx src/ai/dev.ts",
     "genkit:watch": "genkit start -- tsx --watch src/ai/dev.ts",
-    "build": "PRISMA_QUERY_ENGINE_LIBRARY=\"./node_modules/.prisma/client/libquery_engine-debian-openssl-3.0.x.so.node\" NODE_ENV=production next build",
+    "build": "PRISMA_QUERY_ENGINE_LIBRARY=\"/home/user/studio/node_modules/.prisma/client/libquery_engine-debian-openssl-3.0.x.so.node\" next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "prisma:generate": "prisma generate",
-    "prisma:seed": "prisma db seed",
+    "prisma:generate": "PRISMA_QUERY_ENGINE_LIBRARY=\"/home/user/studio/node_modules/.prisma/client/libquery_engine-debian-openssl-3.0.x.so.node\" prisma generate",
+    "prisma:seed": "PRISMA_QUERY_ENGINE_LIBRARY=\"/home/user/studio/node_modules/.prisma/client/libquery_engine-debian-openssl-3.0.x.so.node\" prisma db seed",
     "postinstall": "prisma generate"
   },
   "prisma": {
